API Response architecture refactoring.
